[gd_scene load_steps=7 format=3 uid="uid://b8b0o7kbfcpfo"]

[ext_resource type="Script" path="res://src/simulator/simulator_root.gd" id="1_ssr3d"]
[ext_resource type="PackedScene" uid="uid://blg6o7cni0t0n" path="res://src/simulator/simulator_ui/simulator_parameter_panel.tscn" id="2_wry1n"]
[ext_resource type="PackedScene" uid="uid://of3bmugoqexm" path="res://src/simulator/simulator_ui/path_panel.tscn" id="3_0g5ep"]
[ext_resource type="Script" path="res://src/common/common_ui/error_dialog.gd" id="4_ntuym"]

[sub_resource type="ButtonGroup" id="ButtonGroup_6oqft"]

[sub_resource type="ButtonGroup" id="ButtonGroup_uebk0"]

[node name="SimulatorRoot" type="VBoxContainer"]
custom_minimum_size = Vector2(600, 0)
offset_right = 345.0
offset_bottom = 452.0
script = ExtResource("1_ssr3d")

[node name="TabBarControls" type="Control" parent="."]
layout_mode = 2

[node name="ImportButton" type="Button" parent="TabBarControls"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_bottom = 31.0
grow_horizontal = 0
text = "Import"

[node name="ParameterPanel" parent="." instance=ExtResource("2_wry1n")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="NetworkMemoryOption" type="CheckBox" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_group = SubResource("ButtonGroup_6oqft")
text = "Use the current network"

[node name="NetworkFileOption" type="CheckBox" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_group = SubResource("ButtonGroup_uebk0")
text = "Use a network read from an external file"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0

[node name="NetworkPathPanel" parent="VBoxContainer/MarginContainer" instance=ExtResource("3_0g5ep")]
unique_name_in_owner = true
layout_mode = 2
file_mode = 0
filters = PackedStringArray("*.wavenetwork")

[node name="HSeparator2" type="HSeparator" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="StatusLabel" type="Label" parent="HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Start"

[node name="CancelButton" type="Button" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Cancel"

[node name="HSeparator3" type="HSeparator" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Simulation result"

[node name="AutoSaveBox" type="CheckBox" parent="VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Auto save"

[node name="SaveButton" type="Button" parent="VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Save"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0

[node name="SavePathPanel" parent="VBoxContainer2/MarginContainer" instance=ExtResource("3_0g5ep")]
unique_name_in_owner = true
layout_mode = 2
filters = PackedStringArray("*.wavesimulation")

[node name="HSeparator4" type="HSeparator" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Simulation stats"

[node name="AutoDumpBox" type="CheckBox" parent="VBoxContainer3/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Auto dump"

[node name="DumpButton" type="Button" parent="VBoxContainer3/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Dump"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer3"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0

[node name="DumpPathPanel" parent="VBoxContainer3/MarginContainer" instance=ExtResource("3_0g5ep")]
unique_name_in_owner = true
layout_mode = 2
file_mode = 2

[node name="ImportParameterFileDialog" type="FileDialog" parent="."]
title = "Open a parameter file"
ok_button_text = "Open"
mode_overrides_title = false
file_mode = 0
access = 2
filters = PackedStringArray("*.wavesimulation")
use_native_dialog = true

[node name="ProgressBarTimer" type="Timer" parent="."]
autostart = true

[node name="ErrorDialog" type="AcceptDialog" parent="."]
script = ExtResource("4_ntuym")

[connection signal="pressed" from="TabBarControls/ImportButton" to="." method="_on_import_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="VBoxContainer3/HBoxContainer/DumpButton" to="." method="_on_dump_button_pressed"]
[connection signal="file_selected" from="ImportParameterFileDialog" to="." method="_on_import_parameter_file_dialog_file_selected"]
[connection signal="timeout" from="ProgressBarTimer" to="." method="_on_progress_bar_timer_timeout"]
